--- a/.github/workflows/main_blue-app-services.yml
+++ b/.github/workflows/main_blue-app-services.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - Blue-app-services
 
 on:
@@ -61,11 +58,13 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1ED418D38BD54A9D9AD88BFC65719945 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FC7265E135F7403A8B5C74F900897DFF }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'Blue-app-services'
           slot-name: 'Production'
           package: .
-          
+
+      - name: Start React application
+        run: npm run start
